--- a/templates/postbox/Comments_list.html
+++ b/templates/postbox/Comments_list.html
@@ -8,12 +8,27 @@
    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
   <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js'  %}"></script>
+     <script>
+         $(document).ready(function()
+         {
+             $("#side").hide();
+             $("#menuclick").click(function(){
+                $("#side").show();
+         });
+
+              $("#com").click(function(){
+                   $("#side").hide();
+
+         });
+         });
+     </script>
 
   <style>
     /* Set black background color, white text and some padding */
-    #section{position:absolute;padding-top:80px;}
+    #posts2{opacity: 0.6; filter : alpha(opacity=60);display: none }
+    body{  position: relative;  }
+    #section{padding-top:80px;}
     hr {  display: block;  height: 1px;  border: 0;  border-top: 1px solid darkgray;  margin: 1em 0;  padding: 0;  }
-    #posts1{padding-left:230px;padding-top:10px;width:100%;}
     #side{  z-index: 1000;  position:fixed;left:0; top:50px; width: 200px;  height:100%;  background: #000;  overflow-y: auto;  }
     .sidebar-nav {  position: relative;  top: 0;  width: 200px;  margin: 0;  padding: 0;  list-style: none;  margin-top: 2px;  }
     .sidebar-nav li {  text-indent: 15px;  line-height: 40px;  }
@@ -40,7 +55,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-         <h4 style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px">&nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp;</h4>
+        <h4 style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px"> &nbsp;&nbsp;&nbsp;<a id="menuclick"><span class="glyphicon glyphicon-th-large" aria-hidden="true" style="color: lightgray"></span> </a>
+            &nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp;</h4>
    </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -105,7 +121,7 @@
                       {% for l in img %}
                         {% if  j ==  forloop.counter0 %}
                            {% load staticfiles %}
-                            <img src="{% static l %}" class="img-square" height="500" width=100% alt="Avatar"/><br><br>
+                            <img src="{% static l %}" class="img-square" height="500" width=80% alt="Avatar"/><br><br>
                         {% endif %}
                        {% endfor %}
                   {% endif %}
