--- a/templates/postbox/newsfeed.html
+++ b/templates/postbox/newsfeed.html
@@ -117,7 +117,8 @@
                   {% if  i.image %}
                       {% for l in img %}
                         {% if  j ==  forloop.counter0 %}
-                           {% load staticfiles %} {{ l }}{{ s }}
+                             <p>l is :{{ l }}   s is:{{ s }}</p>
+                           {% load staticfiles %}
                             <img src="{% static l %}" class="img-square" height="500" width=80% alt="Avatar"/><br><br>
                         {% endif %}
                        {% endfor %}
