--- a/templates/postbox/newsfeed.html
+++ b/templates/postbox/newsfeed.html
@@ -97,7 +97,9 @@
 
     <div id="posts1">
 
-          {% for j,i in post %}
+           <h4 style="font-family:'Copperplate Gothic Light';color:black;font-size:30px">NewsFeed</h4> <br>
+
+          {% for i in post %}
             <div class="row">
 
                 <div class="col-lg-16"><div class="well" style=";background:white;">
@@ -115,13 +117,12 @@
                   <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                      {% for l in img %}
-                        {% if  j ==  forloop.counter0 %}
-                             <p>l is :{{ l }}   s is:{{ s }}</p>
-                           {% load staticfiles %}
-                            <img src="{% static l %}" class="img-square" height="500" width=80% alt="Avatar"/><br><br>
-                        {% endif %}
-                       {% endfor %}
+{#                      {% for l in img %}#}
+{#                        {% if  j ==  forloop.counter0 %}#}
+{#                           {% load staticfiles %}#}
+                            <img src="{{ i.image }}" class="img-square"   alt="Avatar"/><br><br>
+{#                        {% endif %}#}
+{#                       {% endfor %}#}
                   {% endif %}
                    <p align="left">{{i.status|safe}}</p><br>
                     <a href="/postbox/{{ full_name }}/{{ i.id }}/comments/">Comments</a>
@@ -135,7 +136,10 @@
 
      <div id="posts2">
 
-          {% for j,i in posts %}
+     <h4 style="font-family:'Copperplate Gothic Light';color:black;font-size:30px">NewsFeed</h4> <br>
+
+
+          {% for i in posts %}
             <div class="row">
 
                 <div class="col-lg-16"><div class="well" style=";background:white;">
@@ -151,12 +155,7 @@
                   <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                      {% for l in img %}
-                        {% if  j ==  forloop.counter0 %}
-                           {% load staticfiles %}
-                            <img src="{% static l %}" class="img-square" height="500" width=100% alt="Avatar"/><br><br>
-                        {% endif %}
-                       {% endfor %}
+                            <img src="{{ i.image }}" class="img-square" alt="Avatar"/><br><br>
                   {% endif %}
                    <p align="left">{{i.status|safe}}</p><br>
                     <a href="/postbox/{{ full_name }}/{{ i.id }}/comments/">Comments</a>
