--- a/templates/postbox/Comments_list.html
+++ b/templates/postbox/Comments_list.html
@@ -16,7 +16,7 @@
                 $("#side").show();
          });
 
-              $("#com").click(function(){
+              $("#posts1").click(function(){
                    $("#side").hide();
 
          });
@@ -101,7 +101,7 @@
     </div>
 
     <div id="posts1">
-          {% for j,i in post %}
+          {% for i in post %}
             <div class="row">
 
                 <div class="col-sm-16">
@@ -118,12 +118,7 @@
                   <p align="left" style="font-size: 30px;font-family: 'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
 
                   {% if  i.image %}
-                      {% for l in img %}
-                        {% if  j ==  forloop.counter0 %}
-                           {% load staticfiles %}
-                            <img src="{% static l %}" class="img-square" height="500" width=80% alt="Avatar"/><br><br>
-                        {% endif %}
-                       {% endfor %}
+                            <img src="{{ i.image }}" class="img-square" alt="Avatar"/><br><br>
                   {% endif %}
                     <p align="left">{{i.status|safe}}</p><br>
                 </div>
