--- a/templates/postbox/Comments_list1.html
+++ b/templates/postbox/Comments_list1.html
@@ -92,7 +92,7 @@
 
    <div id="com">
 
-    {% for j,i in post %}
+    {% for i in post %}
             <div class="row">
 
                  <div class="col-sm-16"><div class="well" style=";background:white;">
@@ -110,12 +110,7 @@
                   <p align="left" style="font-size: 30px;font-family: 'Copperplate Gothic Light';color:darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                      {% for l in img %}
-                        {% if  j ==  forloop.counter0 %}
-                           {% load staticfiles %}
-                            <img src="{% static l %}" class="img-square" height="500" width=80% alt="Avatar"/><br><br>
-                        {% endif %}
-                       {% endfor %}
+                            <img src="{{ i.image }}" class="img-square" alt="Avatar"/><br><br>
                   {% endif %}
                  <p align="left">{{i.status|safe}}</p><br>
 
