--- a/templates/postbox/Comments_list1.html
+++ b/templates/postbox/Comments_list1.html
@@ -110,7 +110,7 @@
                   <p align="left" style="font-size: 30px;font-family: 'Copperplate Gothic Light';color:darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                            <img src="{{ i.image }}" class="img-square" alt="Avatar"/><br><br>
+                            <img src="{{ i.image }}" class="img-square" width="80%" alt="Avatar"/><br><br>
                   {% endif %}
                  <p align="left">{{i.status|safe}}</p><br>
 
