--- a/templates/postbox/user.html
+++ b/templates/postbox/user.html
@@ -116,7 +116,7 @@
                   <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                            <img src="{{ i.image }}" class="img-square"  alt="Avatar"/><br><br>
+                            <img src="{{ i.image }}" class="img-square" width="80%" alt="Avatar"/><br><br>
                   {% endif %}
                    <p align="left">{{i.status|safe}}</p><br>
                     <a href="/postbox/{{ full_name }}/{{ i.cid_id }}/{{ i.id }}/comments/">Comments</a>
@@ -147,7 +147,7 @@
                   <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                            <img src="{{ i.image }}" class="img-square" alt="Avatar"/><br><br>
+                            <img src="{{ i.image }}" class="img-square"  width="80%" alt="Avatar"/><br><br>
                   {% endif %}
                    <p align="left">{{i.status|safe}}</p><br>
                     <a href="/postbox/{{ full_name }}/{{ i.cid_id }}/{{ i.id }}/comments/">Comments</a>
