--- a/templates/postbox/Categories_form.html
+++ b/templates/postbox/Categories_form.html
@@ -19,7 +19,7 @@
                  $("#posts1").hide();
          });
 
-              $("#posts2").click(function(){
+              $("#section").click(function(){
                    $("#side").hide();
                    $("#posts1").show();
                    $("#posts2").hide();
