--- a/templates/postbox/Comments_list1.html
+++ b/templates/postbox/Comments_list1.html
@@ -37,6 +37,8 @@
     .sidebar-nav>li>a:focus {  color:white;  background-color:orange;  }
     .sidebar-nav li a:active {  color:white;  background-color:orange;  }
     .sidebar-nav > .active { color:white;  background:darkorange; }
+          #imge{overflow-y:hidden;max-height:500px;max-width:100%}
+
 
 
   </style>
@@ -110,7 +112,7 @@
                   <p align="left" style="font-size: 30px;font-family: 'Copperplate Gothic Light';color:darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                            <img src="{{ i.image }}" class="img-square" width="100%" alt="Avatar"/><br><br>
+                            <img src="{{ i.image }}" class="img-square" id="imge" alt="Avatar"/><br><br>
                   {% endif %}
                  <p align="left">{{i.status|safe}}</p><br>
 
