--- a/templates/postbox/newsfeed.html
+++ b/templates/postbox/newsfeed.html
@@ -42,6 +42,8 @@
     .sidebar-nav>li>a:focus {  color:white;  background-color:orange;  }
     .sidebar-nav li a:active {  color:white;  background-color:orange;  }
     .sidebar-nav > .active { color:white;  background:darkorange; }
+        #imge{overflow-y:hidden;max-height:500px;max-width:100%}
+
 
   </style>
 </head>
@@ -120,7 +122,7 @@
 {#                      {% for l in img %}#}
 {#                        {% if  j ==  forloop.counter0 %}#}
 {#                           {% load staticfiles %}#}
-                            <img src="{{ i.image }}" class="img-square" width="100%" alt="Avatar"/><br><br>
+                            <img src="{{ i.image }}" class="img-square" id="imge" alt="Avatar"/><br><br>
 {#                        {% endif %}#}
 {#                       {% endfor %}#}
                   {% endif %}
@@ -155,7 +157,7 @@
                   <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
                   <br>
                   {% if  i.image %}
-                            <img src="{{ i.image }}" class="img-square" width="100%" alt="Avatar"/><br><br>
+                            <img src="{{ i.image }}" class="img-square" id="imge" alt="Avatar"/><br><br>
                   {% endif %}
                    <p align="left">{{i.status|safe}}</p><br>
                     <a href="/postbox/{{ full_name }}/{{ i.id }}/comments/">Comments</a>
